# FHE-BI

./: .bazelrc  .gitignore  MODULE.bazel  README.md
bazel/: BUILD.bazel  defs.bzl  fhebi.bzl  repositories.bzl  xtl.BUILD
bazel/openfhe/: cereal.BUILD  openfhe.BUILD  rapidjson.BUILD
libfhebi/: BUILD.bazel  main.cc  openfhe_test.cc  seal_test.cc  tfhe_rs_test.cc
libfhebi/backends/tfhe_rust/: BUILD.bazel
