# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load("//bazel:fhebi.bzl", "fhebi_cc_test")

package(default_visibility = ["//visibility:public"])

cc_import(
    name = "lib-tfhe-api",
    hdrs = ["deps/tfhe.h"],
    static_library =
        "deps/libtfhe.a",
    deps = [":lib-tfhe-buffer"],
)

cc_import(
    name = "lib-tfhe-buffer",
    hdrs = ["deps/tfhe-c-api-dynamic-buffer.h"],
    static_library =
        "deps/libtfhe_c_api_dynamic_buffer.a",
)

fhebi_cc_test(
    name = "tfhe_rs_test",
    srcs = ["tfhe_rs_test.cc"],
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
    deps = [
        ":lib-tfhe-api",
        "@spdlog",
    ],
)
